[나현주]board 수정중

--- a/lms/src/main/resources/templates/PI/Board/PIBoardwrite.html
+++ b/lms/src/main/resources/templates/PI/Board/PIBoardwrite.html
@@ -49,8 +49,8 @@ $(document).ready(function(){
 						<input type="hidden" name="boardType" value="커뮤니티">
 							<!-- 	글내용	 -->
 						<div class="form-group">
-							<label for="InputContent">글내용</label>
-	    					<textarea class="form-control" id="exampleTextarea" rows="10"></textarea>
+							<label for="InputContents">글내용</label>
+	    					<textarea class="form-control" name="boardContents" id="boardContents" rows="10"></textarea>
 		      				<small class="form-text text-muted"></small>
 						</div>
 							<p style="height: 10px"></p>
