[나현주]PI type별 게시판 리스트 완료 상세보기 진행중

--- a/lms/src/main/resources/templates/PA/Board/PABoard.html
+++ b/lms/src/main/resources/templates/PA/Board/PABoard.html
@@ -38,7 +38,7 @@
 					<tr th:each="board:${boardList}">
 						<!-- <input type="hidden" value="${member.memberCode}"> -->
 						<!-- <input type="hidden" value="${member.memberCode}"> -->
-						<th scope="row" th:href="@{'/PIBoardDetail?institutionCode='+${institutionCode}}" th:text="${board.boardTitle}"></th>
+						<th scope="row" th:text="${board.boardTitle}"></th>
 						<td th:text="${board.memberName}"></td>
 				</tbody>
 			</table>
