--- a/lms/src/main/resources/templates/PI/Board/PIFAQ.html
+++ b/lms/src/main/resources/templates/PI/Board/PIFAQ.html
@@ -21,8 +21,11 @@
 		<div class="col-sm-1"></div>
 		<div class="col-sm-10">
 			<h1>FAQ</h1>
-			<div>
+			<!-- <div>
 				<button th:if="${session.memberRank=='교육원직원'||session.memberRank=='협회직원'}" type="button" id="btn-write" class="btn btn-outline-info" th:onclick="|location.href='@{/PIFaqWrite(institutionCode=${institutionCode})}'|">글쓰기</button><br>
+			</div> -->
+			<div th:if="${session.memberRank=='교육원직원'||session.memberRank=='협회직원'}">
+				<a th:href="@{'/PIFaqWrite?institutionCode='+${institutionCode}}" id="btn-write" class="btn btn-outline-info">글쓰기</a>
 			</div>
 			<table class="table table-hover">
 				<thead>
@@ -32,7 +35,7 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="faq:${faqList}">
+					<tr th:each="faq:${FAQList}">
 						<!-- <input type="hidden" value="${member.memberCode}"> -->
 						<!-- <input type="hidden" value="${member.memberCode}"> -->
 						<th scope="row" th:text="${faq.boardTitle}"></th>
