--- a/lms/src/main/resources/templates/PI/Board/PIFaqWrite.html
+++ b/lms/src/main/resources/templates/PI/Board/PIFaqWrite.html
@@ -11,12 +11,26 @@
 <!-- index.html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
 <script>
-/* $(document).ready(function(){
-	$('#btn').on('click',function(){	//$('#btnRemove').click() 가능.
-		console.log('#btnRemove click');
-		
+$(document).ready(function(){
+	$('#btnAdd').on('click',function(){	//$('#btnRemove').click() 가능.
+		console.log('#btnAdd click test');
+		if ($('#boardTitle').val() == ''){
+			$('#helper').attr('style','color:red');
+			$('#helper').text('*제목을 입력하세요');
+		return false;
+		} else if ($('#boardContents').val() == ''){
+			$('#helper').attr('style','color:red');
+			$('#helper').text('*내용을 입력하세요');
+		return false;
+		}
+		$('#addBoard').submit();
+	    alert('새 글이 등록 되었습니다');
     });
-} */
+	$('#btnBack').on('click',function(){
+		console.log('#btnBack click test');
+		location.href='javascript:history.back()';
+	});
+});
 </script>
 </th:block>
 <div layout:fragment="content">
@@ -24,12 +38,12 @@
     	<div class="row">
     		<div class="col-md-1"></div>
     		<div class="col-md-10">
-					<!-- <h1 class="display-3">커뮤니티</h1>	제목	
-					<p class="lead">타인을 비방, 비난하는 글은 경고 없이 삭제될 수 있으며, 이용이 제한 될 수 있습니다.</p>
-					<hr class="my-4">
+					<!-- <h5 class="display-3">FAQ 글쓰기</h5> -->	<!-- 제목 -->	
+					<!-- <p class="lead">타인을 비방, 비난하는 글은 경고 없이 삭제될 수 있으며, 이용이 제한 될 수 있습니다.</p> -->
+					<!-- <hr class="my-4">
 					<p>타인을 비방, 비난하는 글은 경고 없이 삭제될 수 있으며, 이용이 제한 될 수 있습니다.</p> -->
 				<p class="lead">
-				<form action="/insertTeacher" method="post">
+				<form action="/addBoard" id="addBoard" method="post">
 					<fieldset>
 		    			<div class="form-group">
     						<legend>FAQ 글쓰기</legend>
@@ -38,19 +52,18 @@
     					<div class="form-group">
 							<label for="InputTitle">글제목</label>
 							<input type="text" class="form-control" id="boardTitle" name="boardTitle" aria-describedby="" placeholder="제목을 입력하세요" value="">
-		    				<small class="form-text text-muted"></small>
 						</div>
 							<!-- 	글종류	 -->
-						<input type="hidden" name="boardType" value="Q&A">
+						<input type="hidden" name="boardType" id="boardType" value="FAQ">
 							<!-- 	글내용	 -->
 						<div class="form-group">
 							<label for="InputContent">글내용</label>
-	    					<textarea class="form-control" id="exampleTextarea" rows="10"></textarea>
+	    					<textarea class="form-control" id="boardContents" name="boardContents" rows="10"></textarea>
 		      				<small class="form-text text-muted"></small>
 						</div>
 							<p style="height: 10px"></p>
 						<div class="form-group">
-							<button type="button" class="btn btn-primary">#등록</button> <button type="button" class="btn btn-secondary disabled" onclick="location.href='javascript:history.back()'">뒤로가기</button>
+							<button type="button" id="btnAdd" class="btn btn-primary">등록</button> <button type="button" id="btnBack" class="btn btn-secondary disabled">뒤로가기</button>
 						</div>
 					</fieldset>
 				</form>
