--- a/lms/src/main/resources/templates/PI/Board/PINotice.html
+++ b/lms/src/main/resources/templates/PI/Board/PINotice.html
@@ -21,8 +21,11 @@
 			<div class="col-sm-1"></div>
 			<div class="col-sm-10">
 				<h1>공지사항</h1>
-				<div>
+				<!-- <div>
 					<button th:if="${session.memberRank=='교육원직원'||session.memberRank=='협회직원'}" type="button" id="btn-write" class="btn btn-outline-info" th:onclick="|location.href='@{/PINoticeWrite(institutionCode=${institutionCode})}'|">글쓰기</button><br>
+				</div> -->
+				<div th:if="${session.memberRank=='교육원직원'||session.memberRank=='협회직원'}">
+					<a th:href="@{'/PINoticeWrite?institutionCode='+${institutionCode}}" id="btn-write" class="btn btn-outline-info">글쓰기</a>
 				</div>
 				<table class="table table-hover">
 					<thead>
