--- a/lms/src/main/resources/templates/PI/Board/PIQnA.html
+++ b/lms/src/main/resources/templates/PI/Board/PIQnA.html
@@ -20,9 +20,12 @@
 	<div class="row">
 		<div class="col-sm-1"></div>
 		<div class="col-sm-10">
-			<h1>Q&A</h1>										<!-- th:onclick="|window.location.href='@{/update(server=${key})}'|" -->
-			<div>
+			<h1>Q&A</h1>	<!-- th:onclick="|window.location.href='@{/update(server=${key})}'|" -->
+			<!-- <div>
 				<button type="button" id="btn-write" class="btn btn-outline-info" th:onclick="|location.href='@{/PIqnaWrite(institutionCode=${institutionCode})}'|">글쓰기</button><br>
+			</div> -->
+			<div>
+				<a th:href="@{'/PIqnaWrite?institutionCode='+${institutionCode}}" id="btn-write" class="btn btn-outline-info">글쓰기</a>
 			</div>
 			<table class="table table-hover">
 				<thead>
@@ -32,11 +35,11 @@
 					</tr>
 				</thead>
 				<tbody>
-					<tr th:each="board:${boardList}">
+					<tr th:each="qna:${QnAList}">
 						<!-- <input type="hidden" value="${member.memberCode}"> -->
 						<!-- <input type="hidden" value="${member.memberCode}"> -->
-						<th scope="row" th:text="${board.boardTitle}"></th>
-						<td th:text="${board.memberName}"></td>
+						<th scope="row" th:text="${qna.boardTitle}"></th>
+						<td th:text="${qna.memberName}"></td>
 				</tbody>
 			</table>
 		</div>
