[김기남] 자격증 발급 리스트 완료 및 등록 수정중

--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -23,7 +23,7 @@
 	</ul>
 	<h3>협회 : 자격 시험 공고 관리</h3>
 	<ul>
-		<li><a href="/association/notice/addNoticeLicenseTestLocation">자격 시험 공고 등록</a></li>
+		<li><a href="/association/notice/addNoticeLicenseTest">자격 시험 공고 등록</a></li>
 		
 		<li>#<a href="">자격 시험 공고 삭제</a></li>
 		<li>#<a href="">자격 시험 공고 삭제</a></li>
@@ -45,6 +45,11 @@
 		<li><a href="/PI/infoQualificationList">자격증 조회</a></li>
 		<li>#<a href="">자격증 수정</a></li>
 		<li>#<a href="">자격증 삭제</a></li>
+		<li><a href="/association/license/addLicense">자격증 발급 등록</a></li>
+		<li><a href="/association/license/licenseList">자격증 발급 조회</a></li>
+		<li><a href="">자격증 발급 결제 등록</a></li>
+		<li><a href="">자격증 발급 결제 조회</a></li>
+		
 
 	</ul>
 	
