[유하람] 교육원별 폐강대상 조회,폐강등록 완료 / 교육원별 면접 결과 등록(addLectureSignupResult.html) 진행중
- 각 교육원에 해당하는 폐강대상 강의들만이 나올 수 있도록 notice_lecture테이블에
notice_lecture_status컬럼 추가
- 폐강 등록 시 notice_lecture_table의 notice_lecture_status컬럼 업데이트 되도록 코드 작성

- 교육원별 면접 결과 등록페이지 작성중 (addLectureSignupResult.html)
- 수강생들로 수강신청 mockData 입력하도록 할 것

--- a/lms/src/main/resources/templates/institution/lecture/detailNoticeLecture.html
+++ b/lms/src/main/resources/templates/institution/lecture/detailNoticeLecture.html
@@ -46,6 +46,7 @@
 					<th>결과발표일</th>
 					<th>강의 시작일</th>
 					<th>강의 마감일</th>
+					<th>진행여부</th>
 				</tr>
 			</thead>
 			<tbody>
@@ -54,7 +55,8 @@
 					<td th:text="${info.noticeLectureRecruitmentEndDate}" th:value="${info.noticeLectureRecruitmentEndDate}"></td>
 					<td th:text="${info.noticeLectureResultDate}" th:value="${info.noticeLectureResultDate}"></td>
 					<td th:text="${info.noticeLectureStartDate}" th:value="${info.noticeLectureStartDate}"></td>
-					<td th:text="${info.noticeLectureEndDate}" th:value="${info.noticeLectureEndDate}"></td>				
+					<td th:text="${info.noticeLectureEndDate}" th:value="${info.noticeLectureEndDate}"></td>	
+					<td th:text="${info.noticeLectureStatus}" th:value="${info.noticeLectureStatus}"></td>				
 				</tr>
 			</tbody>
 		</table>
