--- a/lms/src/main/resources/templates/institution/lecture/lectureList.html
+++ b/lms/src/main/resources/templates/institution/lecture/lectureList.html
@@ -9,36 +9,56 @@
 
 <!-- html 고유 스크립트 추가 -->
 <th:block layout:fragment="script">
-<script>$(document).ready(function(){
-	// 강의등록하기 버튼 클릭시 이벤트 처리
-	$('#btnAdd').on('click',function(){
-		console.log('#btnAdd click test');
-		location.href='/institution/lecture/addLecture'
-	});
-});
-</script>
 </th:block>
 
 <div layout:fragment="content">
-	<h2>강의목록 조회</h2>
-	
-	<button type="button" id="btnAdd" class="btn btn-primary btn-rightLarge">강의개요 등록하기</button><br><br>
-	
+	<h1>강의 관리</h1>
+	<br>
+	<h3>강의 등록 예정 공고</h3>
+	<h6>강의공고를 선택하여 등록하면 진행중인 강의로 등록하실 수 있습니다</h6>
 	<table class="table table-striped">
 		<thead>
 			<tr>
 				<th>강의공고명</th>
-				<th>교육원명</th>
+				<th>교육원</th>
 				<th>강사명</th>
-				<th>수업일수</th>
+				<th>모집 시작일</th>
+				<th>모집마감일</th>				
+				<th>강의 시작일</th>
+				<th>강의 마감일</th>
+				<th>등록</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr th:each="list:${lectureList}">
-				<td><a th:href="@{'/institution/lecture/detailLecture?lectureCode='+${list.lectureCode}}" th:text=${list.noticeLectureTitle} th:value="${list.lectureCode}"></a></td>
-				<td th:text=${list.institutionName} th:value="${list.institutionCode}"></td>		
-				<td th:text=${list.memberTeacherName} th:value="${list.memberTeacherCode}"></td>
-				<td th:text=${list.lectureClassDays} th:value="${list.lectureClassDays}"></td>	
+			<tr th:each="list:${failWaitingList}">
+				<td><a th:href="@{'/institution/lecture/detailNoticeLecture?noticeLectureCode='+${list.noticeLectureCode}}" th:text="${list.noticeLectureTitle}" th:value="${list.noticeLectureCode}"></a></td>
+				<td th:text="${list.institutionName}" th:value="${list.institutionName}"></td>
+				<td th:text="${list.memberTeacherName}" th:value="${list.memberTeacherName}"></td>	
+				<td th:text="${list.noticeLectureRecruitmentStartDate}" th:value="${list.noticeLectureRecruitmentStartDate}"></td>
+				<td th:text="${list.noticeLectureRecruitmentEndDate}" th:value="${list.noticeLectureRecruitmentEndDate}"></td>
+				<td th:text="${list.noticeLectureStartDate}" th:value="${list.noticeLectureStartDate}"></td>
+				<td th:text="${list.noticeLectureEndDate}" th:value="${list.noticeLectureEndDate}"></td>		
+				<td><a th:href="@{'/institution/lecture/addLecture?noticeLectureCode='+${list.noticeLectureCode}}" type="submit" class="btn btn-primary">등록하기</a></td>		
+			</tr>
+		</tbody>
+	</table>
+	
+	<h3>진행중인 강의</h3>
+	<table class="table table-striped">
+		<thead>
+			<tr>
+				<th>강의공고명</th>
+				<th>교육원</th>
+				<th>강사명</th>
+				<th>폐강일자</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr th:each="list:${failLectureList}">
+				<td><a th:href="@{'/institution/lecture/detailLecture?lectureCode='+${list.lectureCode}}" th:text="${list.noticeLectureTitle}" th:value="${list.lectureCode}"></a></td>
+				<td th:text="${list.institutionName}" th:value="${list.institutionName}"></td>
+				<td th:text="${list.memberTeacherName}" th:value="${list.memberTeacherName}"></td>
+				<td th:text="${list.lectureFailDate}" th:value="${list.lectureFailDate}"></td>				
 			</tr>
 		</tbody>
 	</table>
