--- a/lms/src/main/resources/templates/institution/lecture/addNoticeLecture.html
+++ b/lms/src/main/resources/templates/institution/lecture/addNoticeLecture.html
@@ -140,19 +140,19 @@ $(document).ready(function(){
 		    <input type="text" class="form-control" id="noticeLectureCurrentApplicantNo" name="noticeLectureCurrentApplicantNo">
 		</div>
 		<div class="row">
-			<div class="col-sm-6">
+			<div class="col-sm-4">
 				<label>모집시작일 :</label>
-			    <input type="date" class="form-control" placeholder="ex) 공백없이 다음과 같이 적어주세요.. 2019-01-01-09시" id="noticeLectureRecruitmentStartDate" name="noticeLectureRecruitmentStartDate">
+			    <input type="date" class="form-control" id="noticeLectureRecruitmentStartDate" name="noticeLectureRecruitmentStartDate">
 			</div>
-			<div class="col-sm-6">
+			<div class="col-sm-4">
 				<label>모집마감일 :</label>
-			    <input type="date" class="form-control" placeholder="ex) 공백없이 다음과 같이 적어주세요.. 2019-01-01-09시" id="noticeLectureRecruitmentEndDate" name="noticeLectureRecruitmentEndDate">
+			    <input type="date" class="form-control" id="noticeLectureRecruitmentEndDate" name="noticeLectureRecruitmentEndDate">
 			</div>
-		</div>		
-		<div class="form-group">
-			<label>결과발표일 :</label>
-		    <input type="date" class="form-control" placeholder="ex) 공백없이 다음과 같이 적어주세요.. 2019-01-01-09시" id="noticeLectureResultDate" name="noticeLectureResultDate">
-		</div>
+			<div class="col-sm-4">
+				<label>결과발표일 :</label>
+			    <input type="date" class="form-control" id="noticeLectureResultDate" name="noticeLectureResultDate">
+			</div>
+		</div>				
 		<div class="form-group">
 			<label>수강료 :</label>
 		    <input type="text" class="form-control" placeholder="쉼표를 사용하실 수 없습니다.." id="noticeLectureFee" name="noticeLectureFee">
@@ -160,11 +160,11 @@ $(document).ready(function(){
 		<div class="row">
 			<div class="col-sm-6">
 				<label>강의시작일 :</label>
-			    <input type="date" class="form-control" placeholder="ex) 공백없이 다음과 같이 적어주세요.. 2019-01-01-09시" id="noticeLectureStartDate" name="noticeLectureStartDate">
+			    <input type="date" class="form-control" id="noticeLectureStartDate" name="noticeLectureStartDate">
 			</div>
 			<div class="col-sm-6">
 				<label>강의종료일 :</label>
-			    <input type="date" class="form-control" placeholder="ex) 공백없이 다음과 같이 적어주세요.. 2019-01-01-09시" id="noticeLectureEndDate" name="noticeLectureEndDate">
+			    <input type="date" class="form-control" id="noticeLectureEndDate" name="noticeLectureEndDate">
 			</div>
 		</div>
 				
