[나현주]PAHeader - index code 경로수정 PIBoardDetail 파일경로 수정

--- a/lms/src/main/resources/templates/fragments/PAHeader.html
+++ b/lms/src/main/resources/templates/fragments/PAHeader.html
@@ -31,7 +31,7 @@
 	</nav>
 	<div class="container-fluid container bg-info text-white" style="height: 250px">
 	    <p style="height: 100px"></p>
-	    <p><a style="font-size: 30px" class="text-white" href="/PAIndex?institutionCode=I0">평생교육지원협회</a></p>
+	    <p><a style="font-size: 30px" class="text-white" href="/PAIndex?institutionCode=I20120101000000">평생교육지원협회</a></p>
 	</div>
 	<nav class="navbar navbar-expand-sm bg-dark navbar-dark">
 	    <div class="container-fluid">
