--- a/lms/src/main/resources/templates/PA/PAIndex.html
+++ b/lms/src/main/resources/templates/PA/PAIndex.html
@@ -11,6 +11,6 @@
 <th:block layout:fragment="script">
 </th:block>
 <div layout:fragment="content">
-<h3 th:text="'안녕하세요 '+${institutionName}+' 입니다.'"></h3>
+<h3>안녕하세요 평생교육지원협회 입니다.</h3>
 </div>
 </html>
