--- a/lms/src/main/resources/templates/PI/Board/PIqnaWrite.html
+++ b/lms/src/main/resources/templates/PI/Board/PIqnaWrite.html
@@ -54,11 +54,11 @@ $(document).ready(function(){
 							<input type="text" class="form-control" id="boardTitle" name="boardTitle" aria-describedby="" placeholder="제목을 입력하세요" value="">
 						</div>
 							<!-- 	글종류	 -->
-						<input type="hidden" name="boardType" id="boardType" value="Q&A">
+						<input type="hidden" name="boardType" id="boardType" value="QnA">
 							<!-- 	글내용	 -->
 						<div class="form-group">
 							<label for="InputContent">글내용</label>
-	    					<textarea class="form-control" id="boardContents" rows="10"></textarea>
+	    					<textarea class="form-control" id="boardContents" name="boardContents" rows="10"></textarea>
 		      				<small id="helper" class="form-text text-muted"></small>
 						</div>
 							<p style="height: 10px"></p>
