--- a/lms/src/main/resources/templates/rootIndex.html
+++ b/lms/src/main/resources/templates/rootIndex.html
@@ -42,7 +42,7 @@
 	<h2>사단법인 평생교육원 협회 통합 관리 시스템</h2>
 	<p>한개의 협회가 여러개의 교육원 시설을 통합으로 관리하기 위한 시스템</p>
 	<br>
-	<h3>배포일 2019-07-10</h3>
+	<h3>배포일 2019-07-11</h3>
 	<p style="height: 100px"></p>
 	<h4>권한별 역할</h4>
 	<table class="rootTable">
@@ -92,7 +92,7 @@
 				</td>	
 			</tr>
 			<tr>
-				<td><div class="btn-group btn-group-lg"><a href="/PAIndex?institutionCode=I20120101000000" class="btn btn-outline-primary">평생교육지원협회</a></div></td>
+				<td><div class="btn-group btn-group-lg"><a href="/PAIndex" class="btn btn-outline-primary">평생교육지원협회</a></div></td>
 				<td>
 					수강생/교육원/강사/협회
 				</td>
