--- a/lms/src/main/resources/templates/PA/Board/PAQnA.html
+++ b/lms/src/main/resources/templates/PA/Board/PAQnA.html
@@ -25,7 +25,7 @@
 				<button type="button" id="btn-write" class="btn btn-outline-info" th:onclick="|location.href='@{/PIqnaWrite(institutionCode=${institutionCode})}'|">글쓰기</button><br>
 			</div> -->
 			<div>
-				<a th:href="@{'/PAqnaWrite}" id="btn-write" class="btn btn-outline-info">글쓰기</a>
+				<a href="/PAqnaWrite" id="btn-write" class="btn btn-outline-info">글쓰기</a>
 			</div>
 			<table class="table table-hover">
 				<thead>
@@ -39,7 +39,7 @@
 					<tr th:each="board:${board}">
 						<!-- <input type="hidden" value="${member.memberCode}"> -->
 						<!-- <input type="hidden" value="${member.memberCode}"> -->
-						<th scope="row"><a th:href="@{'/PABoardDetail?institutionCode='+${institutionCode}+'&boardNo='+${board.boardNo}}" th:text="${board.boardTitle}"></a></th>
+						<th scope="row"><a th:href="@{'/PABoardDetail?institutionCode='+${board.institutionCode}+'&boardNo='+${board.boardNo}}" th:text="${board.boardTitle}"></a></th>
 						<td th:text="${board.memberName}"></td>
 						<td th:text="${board.boardDate}"></td>
 				</tbody>
