[김기남] 자격 시험 결과 등록 및 조회

--- a/lms/src/main/resources/templates/association/associationIndex.html
+++ b/lms/src/main/resources/templates/association/associationIndex.html
@@ -47,8 +47,8 @@
 		<li>#<a href="">자격증 삭제</a></li>
 		<li><a href="/association/license/addLicense">자격증 발급 등록</a></li>
 		<li><a href="/association/license/licenseList">자격증 발급 조회</a></li>
-		<li><a href="">자격증 발급 결제 등록</a></li>
-		<li><a href="">자격증 발급 결제 조회</a></li>
+		<li><a href="/association/license/addLicenseTestResultManagement">자격증 발급 결제 등록</a></li>
+		<li><a href="/association/license/licenseTestResultManagementList">자격증 발급 결제 조회</a></li>
 		
 
 	</ul>
