--- a/lms/src/main/resources/templates/PA/myPage/PAmyInfo.html
+++ b/lms/src/main/resources/templates/PA/myPage/PAmyInfo.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout/PILayout">
+      layout:decorator="layout/PALayout">
 <meta charset="utf-8">
 <title>회원정보</title>
 <!-- index.html 고유 CSS 추가 -->
